GNOME Bugzilla – Bug 633568
Missing escaping in gkr/seahorse-gkr-item-properties.c:transform_item_details
Last modified: 2011-01-19 22:34:30 UTC
Function transform_item_details doesn't escape names and values of GNOME Keyring item's attributes. This leads to warnings like this: Gtk-WARNING **: Failed to set text from markup due to error parsing markup: Error on line 1 char 30: Odd character '/', expected a '>' character to end the empty-element tag 'svn:' I have stored password for SVN repository and the GKR item's attributes looks like this (name: value): domain: <svn://localhost:3690> f4644e1b-a74b-430d-9284-79753ff5abf0 user: harry Function transform_item_details transforms them to marked-up string: <b>domain</b>: <svn://localhost:3690> f4644e1b-a74b-430d-9284-79753ff5abf0 <b>user</b>: harry (Value "<svn://localhost:3690>" not escaped.)
Thanks for the bug report. I've committed a fix: commit a6c1089473d9800f5bbec4757e0b3b604ed532f3 Author: Stef Walter <stef@memberwebs.com> Date: Sun Nov 7 14:13:16 2010 +0000 Escape markup properly when displaying keyring item attributes. https://bugzilla.gnome.org/show_bug.cgi?id=633568
Noob question: shouldn't be the attribute name escaped too?
You're right. Done. commit 1217669712d3279377f7ed2ac123f847e7983474 Author: Stef Walter <stefw@collabora.co.uk> Date: Wed Jan 19 16:33:52 2011 -0600 Escape attribute keyring attribute names properly. https://bugzilla.gnome.org/show_bug.cgi?id=633568