Escape markup properly when displaying keyring item attributes.

https://bugzilla.gnome.org/show_bug.cgi?id=633568